some early edits

--- a/front end/Web/login.html
+++ b/front end/Web/login.html
@@ -15,11 +15,11 @@
 
 			<br>
 			<input type = "text" id = "usernameBox" placeholder="Username" size = "23"> <br>
-			<input type = "password" id = "passwordBox" placeholder="Password" size = "23"> <br><br>
+			<input type = "password" id = "passwordBox" class="passbox" placeholder="Password" size = "23"> <br><br>
 
 			<input type = "button" value = "Submit" id = "loginButton" onclick = "doLogin();">
 			<input type = "button" value = "Make New Account" id = "newAccButton" onclick="location.reload();location.href='./newuser.html'">
-			
+
 			<br><br><span id = "errorLI" class = "errorMsg"></span>
 		</div>
 	</body>
