--- a/front end/Web/newuser.html
+++ b/front end/Web/newuser.html
@@ -16,9 +16,9 @@
 			Username: <br>
 			<input type = "text" id = "newUsername" size = 23> <br><br>
 			Password: <br>
-			<input type = "password" id = "newPass1" size = 23> <br><br>
+			<input type = "password" id = "newPass1" class="passbox" size = 23> <br><br>
 			Confirm Password: <br>
-			<input type = "password" id = "newPass2" size = 23> <br><br>
+			<input type = "password" id = "newPass2" class="passbox" size = 23> <br><br>
 
 			<input type = "button" value = "Submit" id = "doNewAccBtn" onclick = "doNewAcc();">
 			<input type = "button" value = "Cancel" id = "cancelButton" onclick="location.reload();location.href='./login.html'">
