some more edits

--- a/front end/Web/contactbook.html
+++ b/front end/Web/contactbook.html
@@ -10,6 +10,7 @@
 
 	<body>
 	<!-- This div is the screen users see when logged in -->
+	<div id = "ImgBkgrd"></div>
 		<div id = "userPage">
 			<h3>Contact Book</h3>
 			<p id = userSpan></p>
