--- a/front end/Web/newuser.html
+++ b/front end/Web/newuser.html
@@ -10,15 +10,13 @@
 
 	<body>
 	<!-- This div is the screen users see when making a new account -->
+		<div id = "ImgBkgrd"></div>
 		<div id = "newAccPage">
 			<h3>Create a new account.</h3>
 
-			Username: <br>
-			<input type = "text" id = "newUsername" size = 23> <br><br>
-			Password: <br>
-			<input type = "password" id = "newPass1" class="passbox" size = 23> <br><br>
-			Confirm Password: <br>
-			<input type = "password" id = "newPass2" class="passbox" size = 23> <br><br>
+			<input type = "text" id = "newUsername" class="loginbox"  placeholder="Username" size = "23"> <br>
+			<input type = "password" id = "newPass1" class="loginbox" placeholder="Password" size = "23"> <br><br>
+			<input type = "password" id = "newPass2" class="loginbox" placeholder="Confirm Password" size = "23"> <br><br>
 
 			<input type = "button" value = "Submit" id = "doNewAccBtn" onclick = "doNewAcc();">
 			<input type = "button" value = "Cancel" id = "cancelButton" onclick="location.reload();location.href='./login.html'">
