--- a/front end/Web/contactbook.html
+++ b/front end/Web/contactbook.html
@@ -5,9 +5,9 @@
 	<head>
 		<title>Contact Book</title>
 		<link rel="stylesheet" type="text/css" href="css/webpage.css">
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="scripts/contact.js"></script>
 	</head>
 
@@ -19,32 +19,35 @@
 		<h3>Contact Book</h3><hr><br>
 
 
-=======
-	<div id = "userPage" class = "container-fluid">
-		<h3>Contact Book</h3>
 
 		<p id = userSpan></p>
 		<div id="btncontainer">
-		<input type = "button" value = "Log Out" id = "logoutButton"  class="btn btn-outline-secondary" onclick="doLogout();">
-		<input type = "button" value = "Add Contact" id = "addBtn"  class="btn btn-outline-secondary" data-toggle="collapse" data-target="#addDiv" href="#addDiv">
+			<input type = "button" value = "Log Out" id = "logoutButton"   onclick="doLogout();">
+			<input type = "button" value = "Add Contact" id = "addBtn"   data-toggle="collapse" data-target="#addDiv">
 		</div>
 		<!-- This is the menu to add new contacts-->
-		<div id = "addDiv" class="collapse">
-			<p>Add new contact:</p>
-			<input type = "text" id = "fName" class="loginbox" placeholder="First Name" size = "23">
-			<input type = "text" id = "email" class="loginbox" placeholder="Email" size = "23">
-			<br>
-
-			<input type = "text" id = "lName" class="loginbox" placeholder="Last Name" size = "23">
-			<input type = "text" id = "phone" class="loginbox" placeholder="Phone Number" size = "23">
-
 			<br><br>
-			<input type = "button" value = "Confirm" id = "confirmBtn"  class="subutton" onclick="confirmAdd();">
+			<div id = "addDiv" class="collapse">
 
-		</div>
+				<p>Add new contact:</p>
+				<input type = "text" id = "fName" class="loginbox" placeholder="First Name" size = "23">
+				<input type = "text" id = "email" class="loginbox" placeholder="Email" size = "23">
+				<br>
+
+				<input type = "text" id = "lName" class="loginbox" placeholder="Last Name" size = "23">
+				<input type = "text" id = "phone" class="loginbox" placeholder="Phone Number" size = "23">
+
+				<br><br>
+				<input type = "button" value = "Confirm" id = "confirmBtn"  class="subutton" onclick="confirmAdd();">
+
+			</div>
 
 		<br><span id = "errorCB" class = "errorMsg"></span>
 		</div>
-		<div id="useridsearchresults"></div>
+
+		<div id="useridsearchresults" class>
+		</div>
+
+	</div>
 	</body>
 </html>
