--- a/front end/Web/login.html
+++ b/front end/Web/login.html
@@ -6,26 +6,27 @@
 		<title>Contact Book - Login</title>
 
 		<link rel="stylesheet" type="text/css" href="css/webpage.css">
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="scripts/login.js"></script>
 	</head>
 
 	<body>
 	<!-- This div is the login screen -->
 		<div id = "ImgBkgrd"></div>
-		<div id = "loginPage">
-			<h3>Please Log In</h3><hr>
+		<div id = "loginPage" >
 
-			<br>
-			<input type = "text" id = "usernameBox" placeholder="Username" class="loginbox" size = "23"> <br>
-			<input type = "password" id = "passwordBox" class="loginbox" placeholder="Password" size = "23"> <br><br>
-			<div id="btncontainer">
-			<input type = "button" value = "Submit" id = "loginButton" class="subutton" onclick = "doLogin();">
-			<input type = "button" value = "Make New Account" id = "newAccButton"  class="subutton" onclick="location.reload();location.href='./newuser.html'">
-		 </div>
-			<br><br><span id = "errorLI" class = "errorMsg"></span>
+					<h3>Please Log In</h3><hr>
+
+					<br>
+					<input type = "text" id = "usernameBox" placeholder="Username" class="loginbox" size = "23"> <br>
+					<input type = "password" id = "passwordBox" class="loginbox" placeholder="Password" size = "23"> <br><br>
+					<div id="btncontainer">
+					<input type = "button" value = "Submit" id = "loginButton" class="subutton" onclick = "doLogin();">
+					<input type = "button" value = "Make New Account" id = "newAccButton"  class="subutton" onclick="location.reload();location.href='./newuser.html'">
+				 </div>
+					<br><br><span id = "errorLI" class = "errorMsg"></span>
 		</div>
 	</body>
 </html>
