--- a/front end/Web/newuser.html
+++ b/front end/Web/newuser.html
@@ -23,9 +23,9 @@
 				<input type = "password" id = "newPass1"  class="loginbox" placeholder="Password" size = "23"> <br>
 				<input type = "password" id = "newPass2"  class="loginbox" placeholder="Confirm Password" size = "23"> <br><br>
 
-				<div id="btncontainer">
-					<input type = "button" value = "Submit" id = "doNewAccBtn" class="subutton"  class="subutton"  onclick = "doNewAcc();">
-					<input type = "button" value = "Cancel" id = "cancelButton"  class="subutton" onclick="location.reload();location.href='./login.html'">
+				<div class="btn-group" role="group">
+					<input type = "button" value = "Submit" id = "doNewAccBtn" class="btn btn-outline-secondary"  onclick = "doNewAcc();">
+					<input type = "button" value = "Cancel" id = "cancelButton"  class="btn btn-outline-secondary" onclick="location.reload();location.href='./login.html'">
 				</div>
 			<br><br><span id = "errorNU" class = "errorMsg"></span>
 		</div>
