more format changes

--- a/front end/Web/contactbook.html
+++ b/front end/Web/contactbook.html
@@ -20,16 +20,16 @@
 
 
 
-		<p id = userSpan></p>
+		<p id = userSpan></p><br>
 		<div class="btn-group" role="group">
 			<input type = "button" value = "Log Out" id = "logoutButton" class="btn btn-outline-secondary"  onclick="doLogout();">
 			<input type = "button" value = "Add Contact" id = "addBtn"  class="btn btn-outline-secondary" data-toggle="collapse" data-target="#addDiv">
 		</div>
 		<!-- This is the menu to add new contacts-->
-			<br><br>
+			<br>
 			<div id = "addDiv" class="collapse">
 
-				<p>Add new contact:</p>
+				<br><h3>Add new contact:</h3><br>
 				<input type = "text" id = "fName" class="loginbox" placeholder="First Name" size = "23">
 				<input type = "text" id = "email" class="loginbox" placeholder="Email" size = "23">
 				<br>
